@@ -1,5 +1,9 @@
 2006-12-17 Erik Hjortsberg  <erik@katastrof.nu>
 
+	* acinclude.m4: more GL fixes
+
+2006-12-17 Erik Hjortsberg  <erik@katastrof.nu>
+
 	* acinclude.m4: fixed GL includes
 
 2006-12-16 Erik Hjortsberg  <erik@katastrof.nu>
